objects/Offering__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Offering Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Line_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Line Id</label>
        <referenceTo>Service_Line__c</referenceTo>
        <relationshipLabel>Offerings</relationshipLabel>
        <relationshipName>Offerings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <formula>Service_Line_Name__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Line</label>
        <type>Text</type>
    </fields>
    <label>Offering</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Manager_User__c</columns>
        <columns>Service_Line__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Offering-{0000}</displayFormat>
        <label>Offering ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>